@@ -7,6 +7,7 @@
     * Add Net::SSLeay::X509#get_issuer_name method.
     * Add Net::SSLeay::X509#get_subject_name method.
     * Add Net::SSLeay::EVP_MD class.
+    * Add Net::SSLeay::EVP class.
 0.010 2024-11-11
   [New Features]
     * Add Net::SSLeay::BIO#new_file method.
